compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__private_definitions_are_not_included.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\nconst float = 1.1\nfn main() {}\ntype Foo\n"
---
{
  "name": "my_package",
  "package_version": "11.11.11",
  "gleam_version": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "types": {},
      "values": {}
    }
  }
}
