compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__type_aliases.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: pub type Foo(a) = Int
---
{
  "name": "my_package",
  "package_version": "11.11.11",
  "gleam_version": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type_aliases": {
        "Foo": {
          "documentation": null,
          "deprecation": null,
          "parameters": 1,
          "alias": {
            "kind": "Named",
            "name": "Int",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        }
      },
      "types": {},
      "values": {}
    }
  }
}
