compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__type_aliases_are_ignored.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: pub type Foo = Int
---
{
  "name": "my_package",
  "package_version": "11.11.11",
  "gleam_version": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "types": {},
      "values": {}
    }
  }
}
