compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__type_definition.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\n/// Wibble's documentation\npub type Wibble(a, b) {\n  Wibble\n  Wobble\n}\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Wibble": {
          "documentation": " Wibble's documentation\n",
          "deprecation": null,
          "parameters": 2,
          "constructors": [
            {
              "documentation": null,
              "name": "Wibble",
              "parameters": [],
              "deprecation": null
            },
            {
              "documentation": null,
              "name": "Wobble",
              "parameters": [],
              "deprecation": null
            }
          ]
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
